--- a/src/styles/routeSwitch.css
+++ b/src/styles/routeSwitch.css
@@ -25,7 +25,8 @@
   height: max-content;
   align-self: center;
   margin-left: 50px;
-  border: 10px solid black
+  border: 10px solid black;
+  box-shadow: -18px 16px 5px 0px rgba(0,0,0,0.5);
 }
 .target{
   position: absolute;
@@ -57,6 +58,7 @@
   height: 100%;
   width: 100%;
   position:static;
+  margin-bottom: 10px;
 }
 .img-container{
   display: flex;
