--- a/src/styles/routeSwitch.css
+++ b/src/styles/routeSwitch.css
@@ -26,7 +26,7 @@
   align-self: center;
   margin-left: 50px;
   border: 10px solid black;
-  box-shadow: -18px 16px 5px 0px rgba(0,0,0,0.5);
+  box-shadow: -11px 11px 5px 0px rgba(0,0,0,0.5);
 }
 .target{
   position: absolute;
@@ -53,6 +53,7 @@
   height: 200px;
   width: 100px;
   border: 10px solid red;
+  box-shadow: -7px 7px 5px 0px rgba(0,0,0,0.4);
 }
 .img-frame img{
   height: 100%;
@@ -66,4 +67,9 @@
   height: 100%;
   justify-content: space-around;
   align-items: center;
+}
+.restart{
+  background-color: rgba(255, 255, 255, 0.85);
+  font-size: medium;
+  font-weight: 500;
 }
