--- a/src/styles/routeSwitch.css
+++ b/src/styles/routeSwitch.css
@@ -14,9 +14,12 @@
   flex-direction: column;
   font-size: x-large;
   margin-bottom: 100px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 .nav-title{
   padding: 20px;
+  text-align: center;
 }
 .frame{
   display: flex;
@@ -27,6 +30,7 @@
   margin-left: 50px;
   border: 10px solid black;
   box-shadow: -11px 11px 5px 0px rgba(0,0,0,0.5);
+  border-radius: 10px;
 }
 .target{
   position: absolute;
@@ -53,6 +57,7 @@
   height: 200px;
   width: 100px;
   border: 10px solid red;
+  border-radius: 10px;
   box-shadow: -7px 7px 5px 0px rgba(0,0,0,0.4);
 }
 .img-frame img{
@@ -72,4 +77,11 @@
   background-color: rgba(255, 255, 255, 0.85);
   font-size: medium;
   font-weight: 500;
+}
+.content{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
 }
