--- a/src/styles/routeSwitch.css
+++ b/src/styles/routeSwitch.css
@@ -23,7 +23,6 @@
 }
 .frame{
   display: flex;
-  margin-bottom: 100px;
   width: max-content;
   height: max-content;
   align-self: center;
@@ -54,8 +53,8 @@
   color: rgb(0, 0, 0);
 }
 .img-frame{
-  height: 200px;
-  width: 100px;
+  height: 150px;
+  width: 75px;
   border: 10px solid red;
   border-radius: 10px;
   box-shadow: -7px 7px 5px 0px rgba(0,0,0,0.4);
@@ -73,7 +72,8 @@
   justify-content: space-around;
   align-items: center;
 }
-.restart{
+.restart,
+.nav-button-container button{
   background-color: rgba(255, 255, 255, 0.85);
   font-size: medium;
   font-weight: 500;
@@ -84,4 +84,12 @@
   align-items: center;
   height: 100%;
   width: 100%;
+}
+.nav-button-container{
+  display: flex;
+  justify-content: space-around;
+}
+.nav-button-container div{
+  margin-left: 10px;
+  margin-right: 10px;
 }
